# ctloader

./: .gitignore  Cargo.toml  Makefile  README.md  diesel.toml  env_default  tsvec.sql
data/: NCT00000516.xml  NCT00002842.xml  NCT00003492.xml  NCT00010803.xml  NCT01186809.xml  NCT02408601.xml  NCT03467997.xml  bad.xml  public.xsd  test.xml
src/: .lib.rs.swp  lib.rs  main.rs  models.rs  schema.rs
