[package]
name = "ctloader"
version = "0.1.0"
authors = ["Ken Youens-Clark <kyclark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "~2.33"
diesel = { version = "1.4.6", features = ["postgres", "chrono"] }
diesel_full_text_search = "1"
dotenv = "0.15.0"
dtparse = "~1.2"
postgres = "~0.15"
quick-xml = { version = "0.21.0", features = [ "serialize" ] }
regex = "~1.4"
serde = { version = "1.0", features = [ "derive" ] }
spectral = "0.6.0"
walkdir = "2"
