[package]
name = "ctloader"
version = "0.2.0"
authors = ["Ken Youens-Clark <kyclark@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2.33"
diesel = { version = "1.4.7", features = ["postgres", "chrono"] }
diesel_full_text_search = "1"
dotenv = "0.15"
dtparse = "1.2"
postgres = "0.19"
quick-xml = { version = "0.22", features = [ "serialize" ] }
regex = "1"
serde = { version = "1", features = [ "derive" ] }
spectral = "0.6"
walkdir = "2"
